Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-08-22 Gal
 BUG: [ 1543783 ] Misbehave margin draw
  Src/editlib: ccrystaltextview.cpp

2006-08-22 Kimmo
 PATCH: [ 1544147 ] Add Install-feature for file filters
  Src: FileFiltersDlg.cpp FileFiltersDlg.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 BUG: [ 1534429 ] Message IDS_SUGGEST_IGNOREEOL incorrect
  Src: MergeDoc.cpp

2006-08-20 Kimmo
 PATCH: [ 1424673 ] Widen labels on OpenDialog
  Submitted by Perry
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-08-19 Kimmo
 PATCH: [ 1542201 ] Change default user filter folder to WinMerge/Filters
  Src: MainFrm.cpp
 PATCH: [ 1542829 ] Rename Format-item in File-menu to Convert
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-08-17 Kimmo
 PATCH: [ 1540090 ] Change horizontal scroll synch from relative to absolute
  Src/Common: SplitterWndEx.cpp

2006-08-17 Gal
 PATCH: [ 1541158 ] New high-color toolbar icons
  Src: BCMenu.cpp MainFrm.cpp MainFrm.h Merge.rc resource.h
  Src/res: ToolbarDisabled.bmp ToolbarEnabled.bmp

2006-08-16 Takashi
 PATCH: [ 1539568 ] draw icon at modified line (it was changed to line revision marks)
  Src: GhostTextBuffer.cpp GhostTextBuffer.h MergeDoc.cpp MergeDoc.h
  Src/editlib: ccrystaltextbuffer.cpp ccrystaltextbuffer.h ccrystaltextview.cpp

2006-08-16 Kimmo
 PATCH: [ 1456356 ] Scrollbars sometimes not initially active
  Src: Merge.cpp

2006-08-15 Kimmo
 PATCH: [ 1540129 ] Fix indentation of diffutils io.c
  Src/diffutils/src: IO.C
 PATCH: [ 1540054 ] Remove Copy All -items from folder compare menu
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
 PATCH: [ 1535558 ] Add GUI for shell extension folder include
  Src: Merge.rc PropRegistry.cpp PropRegistry.h resource.h
  Src/Languages/*: Merge*.rc

2006-08-13 Gal
 BUG: [ 1538340 ] Undo enabled for folder compare.
  Src: DirView.h DirView.cpp

2006-08-13 Takashi
 Japanese translation - update